--- a/templates/frontend/header.html
+++ b/templates/frontend/header.html
@@ -15,6 +15,7 @@
         <div class="navbar">
             <div class="navbar-inner">
                 <div class="container">
+                	<a class="brand"> <img src="/media/varnish_logo.png"></a>
                     <ul class="nav">
                         <li class="brand">Varnish Admin</li>
                         <li class="active"><a href="#">Status</a></li>
