--- a/templates/frontend/header.html
+++ b/templates/frontend/header.html
@@ -5,7 +5,9 @@
 
 {% block head %}
     <title>Varnish Admin | {% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="/static/custom.css">
     {% bootstrap_stylesheet_tag %}
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     {% bootstrap_javascript_tag %}
 {% endblock %}
@@ -15,7 +17,7 @@
         <div class="navbar">
             <div class="navbar-inner">
                 <div class="container">
-                	<a class="brand"> <img src="/media/varnish_logo.png"></a>
+                	<!--<a class="brand"> <img src="/static/varnish_logo40.png"></a>-->
                     <ul class="nav">
                         <li class="brand">Varnish Admin</li>
                         <li class="active"><a href="#">Status</a></li>
