begin status page

--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -12,6 +12,7 @@ Varnish Admin
 {% block content %}
     <section>
         <h2>Welcome, {{ user.username }}</h2>
+        {{ banner }}
         <p>This is the main page of the web portal.</p>
     </section>
 {% endblock %}
