--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% block body %}
     {% include "frontend/header.html" %}
     <div align="center">
-    	<img src="/static/varnish_logo_full.png">
+    	<img class="img-rounded" src="/static/varnish_logo_full.png">
     	
     	{% if form.errors %}
             <p>Your username and password didn't match, please try again.</p>
