--- a/templates/frontend/header.html
+++ b/templates/frontend/header.html
@@ -28,7 +28,7 @@
                     <ul class="nav pull-right">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                System
+                                {{ version }}
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
