--- a/templates/frontend/header.html
+++ b/templates/frontend/header.html
@@ -10,6 +10,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     {% bootstrap_javascript_tag %}
+        
 {% endblock %}
 
 {% block body %}
@@ -23,7 +24,6 @@
                         <li class="active"><a href="#">Status</a></li>
                         <li><a href="#">VCL</a></li>
                         <li><a href="#">Ban URL</a></li>
-
                     </ul>
                     <ul class="nav pull-right">
                         <li class="dropdown">
@@ -43,4 +43,4 @@
 
 
 
-{% endblock %}
+{% endblock %}<
