--- a/templates/frontend/header.html
+++ b/templates/frontend/header.html
@@ -5,12 +5,11 @@
 
 {% block head %}
     <title>Varnish Admin | {% block title %}{% endblock %}</title>
+    
     <link rel="stylesheet" href="/static/custom.css">
-    {% bootstrap_stylesheet_tag %}
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    {% bootstrap_javascript_tag %}
-        
+    <link rel="stylesheet" href="/static/bootstrap.css">
+    <script src="/static/jquery.min.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -18,9 +17,8 @@
         <div class="navbar">
             <div class="navbar-inner">
                 <div class="container">
-                	<!--<a class="brand"> <img src="/static/varnish_logo40.png"></a>-->
+                	<a class="brand">Varnish Admin</a>
                     <ul class="nav">
-                        <li class="brand">Varnish Admin</li>
                         <li class="active"><a href="#">Status</a></li>
                         <li><a href="#">VCL</a></li>
                         <li><a href="#">Ban URL</a></li>
@@ -40,7 +38,5 @@
             </div>
         </div>
     {% endblocktrans %}
+{% endblock %}
 
-
-
-{% endblock %}<
