--- a/frontend/media/custom.css
+++ b/frontend/media/custom.css
@@ -10,3 +10,8 @@
     -webkit-box-shadow: rgba(200,200,200,0.7) 0 4px 10px -1px;
     box-shadow: rgba(200,200,200,0.7) 0 4px 10px -1px;
 }
+
+.navbar-fixed-bottom {
+	bottom: 0;
+	background-color: currentcolor;
+}
