--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -1,5 +1,78 @@
-{% include "frontend/header.html" %}
+{% extends "base.html" %}
+{% load i18n %}
 
-{% include "frontend/table.html" %}
+{% block head %}
+    <title>Varnish Admin | {% block title %}{% endblock %}</title>
+    
+    <link rel="stylesheet" href="/static/custom.css">
+    <link rel="stylesheet" href="/static/bootstrap.css">
+    <script src="/static/jquery.min.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
+{% endblock %}
 
-{% include "frontend/footer.html" %}
+{% block body %}
+
+		<!-- Navigation bar -->
+        <div class="navbar navbar-top">
+            <div class="navbar-inner">
+                <div class="container">
+                	<a class="brand">Varnish Admin</a>
+                    <ul class="nav">
+                        <li class="active"><a href="#">Stats</a></li>
+                        <li><a href="#vcledit">VCL</a></li>
+                        <li><a href="#banurl">Ban URL</a></li>
+                    </ul>
+                    <ul class="nav pull-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                {{ version }}
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/logout/">Logout</a>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Left menu with stats results -->
+        <div class="tabbable tabs-left">
+        	<ul class="nav nav-tabs">
+        		<li class="active"><a href="#tab1" data-toggle="tab">Client Stats</a></li>
+        		<li><a href="#tab2" data-toggle="tab">Cache Hit</a></li>
+        		<li><a href="#tab3" data-toggle="tab">Backends Stats</a></li>
+        	</ul>
+
+        	<div class="tab-content">
+        		<div id="tab1" class="tab-pane active">
+        			{% for statname, value in client_stats.items %}
+        			<div class="well" style="max-width: 20%;">
+        				<strong>{{ statname }}</strong> {{ value }}
+        			</div>
+        			{% endfor %}
+        		</div>
+        		<div id="tab2" class="tab-pane">
+        			{% for statname, value in cache_stats.items %}
+        			<div class="well" style="max-width: 20%;">
+        				<strong>{{ statname }}</strong> {{ value }}
+        			</div>
+        			{% endfor %}
+        		</div>
+        		<div id="tab3" class="tab-pane">
+        			{% for statname, value in backend_stats.items %}
+        			<div class="well" style="max-width: 20%;">
+        				<strong>{{ statname }}</strong> {{ value }}
+        			</div>
+        			{% endfor %}
+        		</div>
+        	</div>
+        </div>
+
+        <!-- footer -->
+        <div class="navbar navbar-fixed-bottom"  align="right" right>
+        	<a href="http://lnxnet.es">@ 2013, Lnxnet.es Soluciones OpenSource @  </a>
+        </div>
+
+{% endblock %}
