add hitrate stat

--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -18,7 +18,7 @@
                 <div class="container">
                 	<a class="brand">Varnish Admin</a>
                     <ul class="nav">
-                        <li class="active"><a href="#">Stats</a></li>
+                        <li class="active"><a href="#stats">Stats</a></li>
                         <li><a href="#vcledit">VCL</a></li>
                         <li><a href="#banurl">Ban URL</a></li>
                     </ul>
@@ -38,7 +38,7 @@
         </div>
 
         <!-- Left menu with stats results -->
-        <div class="tabbable tabs-left">
+        <div class="tabbable tabs-left" id="stats">
         	<ul class="nav nav-tabs">
         		<li class="active"><a href="#tab1" data-toggle="tab">Client Stats</a></li>
         		<li><a href="#tab2" data-toggle="tab">Cache Hit</a></li>
@@ -69,6 +69,8 @@
         		</div>
         	</div>
         </div>
+
+        
 
         <!-- footer -->
         <div class="navbar navbar-fixed-bottom"  align="right" right>
