--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -1,14 +1,4 @@
-{% extends "base.html" %}
-{% load i18n %}
-
-{% block head %}
-    <title>Varnish Admin | {% block title %}{% endblock %}</title>
-    
-    <link rel="stylesheet" href="/static/custom.css">
-    <link rel="stylesheet" href="/static/bootstrap.css">
-    <script src="/static/jquery.min.js"></script>
-    <script src="/static/bootstrap.min.js"></script>
-{% endblock %}
+{% include "header.html " %}
 
 {% block body %}
 
