--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -60,11 +60,5 @@
         	</div>
         </div>
 
-        
-
-        <!-- footer -->
-        <div class="navbar navbar-fixed-bottom"  align="right" right>
-        	<a href="http://lnxnet.es">@ 2013, Lnxnet.es Soluciones OpenSource @  </a>
-        </div>
-
+        {% include "footer.html " %}
 {% endblock %}
