division by zero on cachehit calc

--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -1,4 +1,4 @@
-{% include "header.html " %}
+{% include "frontend/header.html" %}
 
 {% block body %}
 
@@ -60,5 +60,5 @@
         	</div>
         </div>
 
-        {% include "footer.html " %}
+        {% include "frontend/footer.html" %}
 {% endblock %}
