--- a/templates/frontend/footer.html
+++ b/templates/frontend/footer.html
@@ -1,3 +1,3 @@
-<div class="navbar navbar-fixed-bottom"  align="right" right>
-	<a href="http://lnxnet.es">@ 2013, Lnxnet.es Soluciones OpenSource @  </a>
+<div class="navbar navbar-fixed-bottom" align="right">
+	<a href="http://lnxnet.es">@2013 Lnxnet.es</a>
 </div>
