--- a/templates/frontend/header.html
+++ b/templates/frontend/header.html
@@ -2,10 +2,36 @@
 {% load i18n %}
 
 {% block head %}
-    <title>Varnish Admin | {% block title %}{% endblock %}</title>
-    
+    <title>{% block title %}VarnishTool{% endblock %}</title>
     <link rel="stylesheet" href="/static/custom.css">
     <link rel="stylesheet" href="/static/bootstrap.css">
     <script src="/static/jquery.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
+{% endblock %}
+
+{% block body %}
+		<!-- Navigation bar -->
+        <div class="navbar navbar-top">
+            <div class="navbar-inner">
+                <div class="container">
+                	<a class="brand">VarnishTool</a>
+                    <ul class="nav">
+                        <li class="active"><a href="/">Stats</a></li>
+                        <li><a href="/vcledit">VCL</a></li>
+                        <li><a href="#banurl">Ban URL</a></li>
+                    </ul>
+                    <ul class="nav pull-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                {{ version }}
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/logout/">Logout</a>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 {% endblock %}
