--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 
 {% block head %}
+<title>{% block title %}VarnishTool{% endblock %}</title>
+
 <link rel="stylesheet" href="/static/custom.css">
 <link rel="stylesheet" href="/static/bootstrap.css">
 <script src="/static/jquery.min.js"></script>
@@ -13,22 +15,11 @@
         <div class="navbar navbar-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="brand">Varnish Admin</a>
+                    <a class="brand">VarnishTool</a>
                     <ul class="nav">
                         <li class="active"><a href="#stats">Stats</a></li>
                         <li><a href="#vcledit">VCL</a></li>
                         <li><a href="#banurl">Ban URL</a></li>
-                    </ul>
-                    <ul class="nav pull-right">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                {{ version }}
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/logout/">Logout</a>
-                            </ul>
-                        </li>
                     </ul>
                 </div>
             </div>
